--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698352731-project-manager-btoc-belgium'>JobTeaser Project Manager BtoC Belgium | SmartRecruiters</a></h5> 
+<h5><a href='https://owow1.recruitee.com/o/assistant-project-manager-oakland'>
+      Assistant Project Manager - oWOW
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://owow1.recruitee.com/o/construction-project-manager-oakland'>
+      Construction Project Manager - oWOW
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493847002'>Job Application for Sales Enablement Program Manager at Twitch</a></h5> 
+<p><span class="badge badge-light">New York City</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4495749002'>Job Application for Senior Technical Program Manager at Twitch</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698352731-project-manager-btoc-belgium'>JobTeaser Project Manager BtoC Belgium | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999698354533-project-manager-application-hosting'>Northgate Public Services Project Manager - Application Hosting | SmartRecruiters</a></h5> 
@@ -158,7 +178,7 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -188,7 +208,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694344947-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694344947-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -224,7 +244,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -252,7 +272,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA Sunnyvale</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -260,11 +280,11 @@
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/innovid/jobs/4497889002'>Job Application for Technical Project Manager at Innovid</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovid/jobs/4497889002'>Job Application for Technical Project Manager at Innovid</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
     Project Manager at RELEX
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -302,7 +322,7 @@
 <p><span class="badge badge-light">San Francisco Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://mthightech.org/job/architectural-project-manager/'>Architectural Project Manager - Montana High Tech Business Alliance</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mthightech.org/job/architectural-project-manager/'>Architectural Project Manager - Montana High Tech Business Alliance</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -334,7 +354,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hoar/job/oterbfw3'>Hoar Careers - Assistant Construction Project Manager / HPM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hoar/job/oterbfw3'>Hoar Careers - Assistant Construction Project Manager / HPM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -364,7 +384,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1918599?gh_jid=1918599'>Job Application for Corporate Event Program Manager at Cloudflare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1918599?gh_jid=1918599'>Job Application for Corporate Event Program Manager at Cloudflare</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 21, 2019 ... The Customer Experience Team is seeking a Corporate Events and Programs 
 Manager to plan, drive and execute in-person premium multi-track events under?...</p>
@@ -439,24 +459,6 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <hr/>
 <h5><a href='https://boards.greenhouse.io/rvm/jobs/1933238'>Job Application for eDiscovery Project Manager (REMOTE -NATIONWIDE) at RVM</a></h5> 
 <p><span class="badge badge-light">New York City San Francisco Seattle</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Jose/Senior-Program-Manager_81046'>Senior Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... We are building new search and Machine Learning platforms that powers our 
-product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
-?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/blizzard/job/owgpbfw6'>Blizzard Entertainment Careers - Senior Program Manager</a></h5> 
-<p><span class="badge badge-light">Irvine, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/stv/job/oOBibfwC'>STV Careers - Third Party Coordinator/Assistant Project Manager</a></h5> 
-<p><span class="badge badge-light">Los Angeles</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://boxercraftinc.applytojob.com/apply/rLqV16Wva5/Project-Manager'>Project Manager - Boxercraft Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
