--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://zizoo.join.com/jobs/461315-full-stack-developer-m-f-x'>Job @ Zizooboats (Berlin): Full-Stack Developer (m... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.php-resource.de/jobs/job,45556,Full-Stack-Software-Entwickler-mwd.htm'>Full Stack Software Entwickler (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -56,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -88,7 +96,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698331625-java-full-stack-developer-with-microservices'>American IT Staff JAVA Full Stack Developer with Microservices | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698331625-java-full-stack-developer-with-microservices'>American IT Staff JAVA Full Stack Developer with Microservices | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -116,11 +124,11 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.socode.co.uk/jobs/senior-full-stack-javascript-developer'>Senior Full Stack Javascript Developer with ref. ST95 - SoCode</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.socode.co.uk/jobs/senior-full-stack-javascript-developer'>Senior Full Stack Javascript Developer with ref. ST95 - SoCode</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -148,7 +156,7 @@
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n7QQlMwp'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n7QQlMwp'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -164,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
 Stage ou CDI - D?velopper Full Stack Laravel / React at LEMON LEARNING in Paris | Laravel jobs | 42jobs.io
 
 </a></h5> 
@@ -259,7 +267,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -317,7 +325,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698052622-senior-fullstack-software-engineer-node-js-typescript-checkout-team-m-f-d-'>Omio Senior Fullstack Software Engineer (Node.js & Typescript) / Checkout Team (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698052622-senior-fullstack-software-engineer-node-js-typescript-checkout-team-m-f-d-'>Omio Senior Fullstack Software Engineer (Node.js & Typescript) / Checkout Team (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -347,7 +355,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/newfrontinsurance/4deca75d-9ba5-4976-8164-0870e49719ce'>Newfront Insurance - Full Stack Engineer (Portland)</a></h5> 
+<h5><a href='https://jobs.lever.co/newfrontinsurance/4deca75d-9ba5-4976-8164-0870e49719ce'>Newfront Insurance - Full Stack Engineer (Portland)</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -365,13 +373,13 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Bengaluru, India  Bengaluru</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://liveaboard.recruitee.com/o/senior-full-stack-net-developer'>
+<h5><a href='https://liveaboard.recruitee.com/o/senior-full-stack-net-developer'>
       Senior Full stack .Net Developer - LiveAboard.com BV
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://chefcompany1.recruitee.com/o/desarrollador-fullstack-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chefcompany1.recruitee.com/o/desarrollador-fullstack-2'>
       Desarrollador Fullstack - Chef Company
     </a></h5> 
 <p><span class="badge badge-light">Medellin, Colombia</span></p>
@@ -417,7 +425,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/smartly.io/e6374dde-df28-460b-b4e4-25db2abac528'>Smartly.io - Fullstack Engineer (Creative tools)</a></h5> 
+<h5><a href='https://jobs.lever.co/smartly.io/e6374dde-df28-460b-b4e4-25db2abac528'>Smartly.io - Fullstack Engineer (Creative tools)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -461,14 +469,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <hr/>
 <h5><a href='https://relocately.join.com/jobs/457604-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://everphone.join.com/jobs/457872-senior-fullstack-engineer-m-f-d'>Job @ everphone (Berlin): Senior Fullstack Enginee... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://enmacc.join.com/jobs/457555-full-stack-web-developer-m-f-d'>Job @ Enmacc (Munich): Full Stack Web Developer (m... | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
